--- a/docs/_react/bulma-customizer/src/App.module.css
+++ b/docs/_react/bulma-customizer/src/App.module.css
@@ -3,15 +3,31 @@
   --var-item-slider-width: 30rem;
   --var-item-padding: 1rem;
   --var-item-gap: 1rem;
+  bottom: 1rem;
+  overflow: auto;
+  position: fixed;
+  right: 1rem;
+  top: 1rem;
+  width: 33rem;
+  z-index: 100;
+}
+
+.customizer {
+  background: var(--bulma-background);
+  border-radius: 0.5rem;
   transform-origin: bottom right;
   transition-duration: 300ms;
   transition-property: opacity, transform;
-  transform: scale(0.9);
+  transform: scale(0.98) translate(2px, 2px);
+  margin-bottom: 4rem;
   opacity: 0;
+  pointer-events: none;
+  min-height: 100%;
 }
 
 .open {
   opacity: 1;
+  pointer-events: auto;
   transform: none;
 }
 
@@ -19,11 +35,11 @@
   display: flex;
   flex-wrap: wrap;
   gap: 0.5rem;
-  padding: 1.5rem;
+  padding: 0.5rem;
 }
 
 .button {
-  bottom: 1rem;
-  right: 1rem;
+  bottom: 1.5rem;
+  right: 1.5rem;
   position: fixed;
 }
