--- a/docs/_react/bulma-customizer/src/components/Color.module.css
+++ b/docs/_react/bulma-customizer/src/components/Color.module.css
@@ -1,15 +1,7 @@
 .main {
-  background-color: var(--bulma-body-background-color);
-  display: flex;
-  flex-wrap: wrap;
-  gap: var(--var-item-gap);
-  box-shadow: 0 0 0 1px var(--bulma-border);
+  border-top: 1px solid var(--bulma-border);
   padding: var(--var-item-padding);
   justify-content: center;
-}
-
-.side {
-  width: 15rem;
 }
 
 .swatch {
@@ -42,13 +34,23 @@
 
 .line {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  gap: 1.5rem;
+  gap: 0 1.5rem;
 }
 
 .line p {
   color: var(--bulma-text-strong);
-  width: 6rem;
+}
+
+.label {
+  width: 100%;
+}
+
+.slider {
+  display: flex;
+  align-items: center;
+  gap: 0 1.5rem;
 }
 
 .form {
@@ -56,6 +58,7 @@
   align-items: center;
   font-family: var(--bulma-family-code);
   gap: 0.25em;
+  width: 6rem;
 }
 
 .form input {
@@ -70,4 +73,8 @@
 
 .form span {
   opacity: 0.5;
+}
+
+.example {
+  margin-top: 0.5rem;
 }
