--- a/docs/_react/bulma-customizer/src/components/VarItem.module.css
+++ b/docs/_react/bulma-customizer/src/components/VarItem.module.css
@@ -1,7 +1,6 @@
 .main {
-  background-color: var(--bulma-body-background-color);
   gap: var(--var-item-gap);
-  box-shadow: 0 0 0 1px var(--bulma-border);
+  border-top: 1px solid var(--bulma-border);
   padding: var(--var-item-padding);
   transition-property: background-color;
   transition-duration: var(--bulma-duration);
