Add Export toggle

--- a/docs/_react/bulma-customizer/src/App.css
+++ b/docs/_react/bulma-customizer/src/App.css
@@ -39,7 +39,7 @@
     font-size: 1rem;
     overflow: auto;
     padding: 1em 1.25em;
-    margin: 0.5rem -0.5rem;
+    margin: 0.5rem -0.5rem -0.5rem;
   }
 
   & > .language-css {
