--- a/docs/_react/bulma-customizer/src/components/Export.module.css
+++ b/docs/_react/bulma-customizer/src/components/Export.module.css
@@ -2,6 +2,20 @@
   padding: 0.5rem;
 }
 
+.body {
+  padding: 0.5rem 1rem ;
+}
+
+.body :global(.title) {
+  margin-bottom: 0;
+}
+
 .explanation {
-  padding: 0 1rem 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  div {
+    flex-wrap: nowrap;
+  }
 }
