--- a/docs/_react/bulma-customizer/src/App.module.css
+++ b/docs/_react/bulma-customizer/src/App.module.css
@@ -1,14 +1,13 @@
 .app {
+  background-color: red;
   --var-item-side-width: 12rem;
   --var-item-slider-width: 30rem;
   --var-item-padding: 1rem;
   --var-item-gap: 1rem;
   bottom: 1rem;
-  overflow: auto;
+  overflow: hidden;
   position: fixed;
   right: 1rem;
-  top: 1rem;
-  width: 33rem;
   z-index: 100;
 }
 
@@ -19,10 +18,14 @@
   transition-duration: 300ms;
   transition-property: opacity, transform;
   transform: scale(0.98) translate(2px, 2px);
-  margin-bottom: 4rem;
   opacity: 0;
   pointer-events: none;
-  min-height: 100%;
+  width: 33rem;
+  top: 1rem;
+  position: fixed;
+  bottom: 4.5rem;
+  right: 1rem;
+  overflow-y: auto;
 }
 
 .open {
@@ -38,8 +41,10 @@
   padding: 0.5rem;
 }
 
-.button {
-  bottom: 1.5rem;
-  right: 1.5rem;
+.buttons {
+  display: flex;
+  gap: 0.5rem;
+  bottom: 1rem;
+  right: 1rem;
   position: fixed;
 }
