--- a/docs/_react/bulma-customizer/src/components/Export.module.css
+++ b/docs/_react/bulma-customizer/src/components/Export.module.css
@@ -3,11 +3,11 @@
 }
 
 .body {
-  padding: 0.5rem 1rem ;
+  padding: 0.5rem 1rem;
 }
 
 .body :global(.title) {
-  margin-bottom: 0;
+  margin-bottom: 0.25rem;
 }
 
 .explanation {
@@ -15,7 +15,15 @@
   align-items: center;
   justify-content: space-between;
 
+  p {
+    padding: 3px 0;
+  }
+
   div {
     flex-wrap: nowrap;
   }
+}
+
+.go {
+  margin-top: 0.5rem;
 }
