--- a/docs/_includes/global/customizer.html
+++ b/docs/_includes/global/customizer.html
@@ -1,4 +1,4 @@
-<div id="bulma-customizer-app"></div>
+<div id="bulma-customizer-app" class="is-hidden-mobile"></div>
 <div id="scope" class="is-hidden">
   <div class="breadcrumb"></div>
   <div class="card"></div>
