--- a/docs/_react/bulma-customizer/src/App.module.css
+++ b/docs/_react/bulma-customizer/src/App.module.css
@@ -12,7 +12,8 @@
 }
 
 .customizer {
-  background: var(--bulma-background);
+  background: var(--bulma-scheme-main);
+  box-shadow: var(--bulma-shadow);
   border-radius: 0.5rem;
   transform-origin: bottom right;
   transition-duration: 300ms;
