--- a/docs/_react/bulma-customizer/src/components/Export.module.css
+++ b/docs/_react/bulma-customizer/src/components/Export.module.css
@@ -27,3 +27,10 @@
 .go {
   margin-top: 0.5rem;
 }
+
+.pre {
+  background-color: var(--gh-dark);
+  margin: 0.5rem -0.5rem;
+  color: var(--gh-text);
+  font-size: 1rem;
+}
