--- a/docs/_includes/docs/hero.html
+++ b/docs/_includes/docs/hero.html
@@ -13,7 +13,7 @@
     {% if include.prints %}
       <div class="bd-hero-prints">
         {% for print in include.prints %}
-          <a class="bd-hero-print icon-text">
+          <a class="bd-hero-print icon-text" href="{{ print.url }}" target="_blank">
             <span class="icon">
               <i class="{{ print.icon }}"></i>
             </span>
