--- a/docs/documentation/layout/footer.html
+++ b/docs/documentation/layout/footer.html
@@ -16,9 +16,9 @@ breadcrumb:
     <p>
       <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>.
       The source code is licensed
-      <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The
+      <a href="https://opensource.org/license/mit">MIT</a>. The
       website content is licensed
-      <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/"
+      <a href="https://creativecommons.org/licenses/by-nc-sa/4.0//"
         >CC BY NC SA 4.0</a
       >.
     </p>
