--- a/css/versions/bulma-no-helpers.css
+++ b/css/versions/bulma-no-helpers.css
@@ -4723,6 +4723,7 @@ body.has-navbar-fixed-bottom {
 .navbar-link {
   color: hsl(var(--bulma-navbar-h), var(--bulma-navbar-s), var(--bulma-navbar-item-color-l));
   display: block;
+  gap: 0.75rem;
   line-height: 1.5;
   padding: 0.5rem 0.75rem;
   position: relative;
@@ -6850,435 +6851,435 @@ label.panel-block:hover {
     display: flex;
   }
 }
-.columns.is-variable.is-0 {
+.columns.is-0 {
   --bulma-column-gap: 0rem;
 }
 @media screen and (max-width: 768px) {
-  .columns.is-variable.is-0-mobile {
+  .columns.is-0-mobile {
     --bulma-column-gap: 0rem;
   }
 }
 @media screen and (min-width: 769px), print {
-  .columns.is-variable.is-0-tablet {
+  .columns.is-0-tablet {
     --bulma-column-gap: 0rem;
   }
 }
 @media screen and (min-width: 769px) and (max-width: 1023px) {
-  .columns.is-variable.is-0-tablet-only {
+  .columns.is-0-tablet-only {
     --bulma-column-gap: 0rem;
   }
 }
 @media screen and (max-width: 1023px) {
-  .columns.is-variable.is-0-touch {
+  .columns.is-0-touch {
     --bulma-column-gap: 0rem;
   }
 }
 @media screen and (min-width: 1024px) {
-  .columns.is-variable.is-0-desktop {
+  .columns.is-0-desktop {
     --bulma-column-gap: 0rem;
   }
 }
 @media screen and (min-width: 1024px) and (max-width: 1215px) {
-  .columns.is-variable.is-0-desktop-only {
+  .columns.is-0-desktop-only {
     --bulma-column-gap: 0rem;
   }
 }
 @media screen and (min-width: 1216px) {
-  .columns.is-variable.is-0-widescreen {
+  .columns.is-0-widescreen {
     --bulma-column-gap: 0rem;
   }
 }
 @media screen and (min-width: 1216px) and (max-width: 1407px) {
-  .columns.is-variable.is-0-widescreen-only {
+  .columns.is-0-widescreen-only {
     --bulma-column-gap: 0rem;
   }
 }
 @media screen and (min-width: 1408px) {
-  .columns.is-variable.is-0-fullhd {
+  .columns.is-0-fullhd {
     --bulma-column-gap: 0rem;
   }
 }
-.columns.is-variable.is-1 {
+.columns.is-1 {
   --bulma-column-gap: 0.25rem;
 }
 @media screen and (max-width: 768px) {
-  .columns.is-variable.is-1-mobile {
+  .columns.is-1-mobile {
     --bulma-column-gap: 0.25rem;
   }
 }
 @media screen and (min-width: 769px), print {
-  .columns.is-variable.is-1-tablet {
+  .columns.is-1-tablet {
     --bulma-column-gap: 0.25rem;
   }
 }
 @media screen and (min-width: 769px) and (max-width: 1023px) {
-  .columns.is-variable.is-1-tablet-only {
+  .columns.is-1-tablet-only {
     --bulma-column-gap: 0.25rem;
   }
 }
 @media screen and (max-width: 1023px) {
-  .columns.is-variable.is-1-touch {
+  .columns.is-1-touch {
     --bulma-column-gap: 0.25rem;
   }
 }
 @media screen and (min-width: 1024px) {
-  .columns.is-variable.is-1-desktop {
+  .columns.is-1-desktop {
     --bulma-column-gap: 0.25rem;
   }
 }
 @media screen and (min-width: 1024px) and (max-width: 1215px) {
-  .columns.is-variable.is-1-desktop-only {
+  .columns.is-1-desktop-only {
     --bulma-column-gap: 0.25rem;
   }
 }
 @media screen and (min-width: 1216px) {
-  .columns.is-variable.is-1-widescreen {
+  .columns.is-1-widescreen {
     --bulma-column-gap: 0.25rem;
   }
 }
 @media screen and (min-width: 1216px) and (max-width: 1407px) {
-  .columns.is-variable.is-1-widescreen-only {
+  .columns.is-1-widescreen-only {
     --bulma-column-gap: 0.25rem;
   }
 }
 @media screen and (min-width: 1408px) {
-  .columns.is-variable.is-1-fullhd {
+  .columns.is-1-fullhd {
     --bulma-column-gap: 0.25rem;
   }
 }
-.columns.is-variable.is-2 {
+.columns.is-2 {
   --bulma-column-gap: 0.5rem;
 }
 @media screen and (max-width: 768px) {
-  .columns.is-variable.is-2-mobile {
+  .columns.is-2-mobile {
     --bulma-column-gap: 0.5rem;
   }
 }
 @media screen and (min-width: 769px), print {
-  .columns.is-variable.is-2-tablet {
+  .columns.is-2-tablet {
     --bulma-column-gap: 0.5rem;
   }
 }
 @media screen and (min-width: 769px) and (max-width: 1023px) {
-  .columns.is-variable.is-2-tablet-only {
+  .columns.is-2-tablet-only {
     --bulma-column-gap: 0.5rem;
   }
 }
 @media screen and (max-width: 1023px) {
-  .columns.is-variable.is-2-touch {
+  .columns.is-2-touch {
     --bulma-column-gap: 0.5rem;
   }
 }
 @media screen and (min-width: 1024px) {
-  .columns.is-variable.is-2-desktop {
+  .columns.is-2-desktop {
     --bulma-column-gap: 0.5rem;
   }
 }
 @media screen and (min-width: 1024px) and (max-width: 1215px) {
-  .columns.is-variable.is-2-desktop-only {
+  .columns.is-2-desktop-only {
     --bulma-column-gap: 0.5rem;
   }
 }
 @media screen and (min-width: 1216px) {
-  .columns.is-variable.is-2-widescreen {
+  .columns.is-2-widescreen {
     --bulma-column-gap: 0.5rem;
   }
 }
 @media screen and (min-width: 1216px) and (max-width: 1407px) {
-  .columns.is-variable.is-2-widescreen-only {
+  .columns.is-2-widescreen-only {
     --bulma-column-gap: 0.5rem;
   }
 }
 @media screen and (min-width: 1408px) {
-  .columns.is-variable.is-2-fullhd {
+  .columns.is-2-fullhd {
     --bulma-column-gap: 0.5rem;
   }
 }
-.columns.is-variable.is-3 {
+.columns.is-3 {
   --bulma-column-gap: 0.75rem;
 }
 @media screen and (max-width: 768px) {
-  .columns.is-variable.is-3-mobile {
+  .columns.is-3-mobile {
     --bulma-column-gap: 0.75rem;
   }
 }
 @media screen and (min-width: 769px), print {
-  .columns.is-variable.is-3-tablet {
+  .columns.is-3-tablet {
     --bulma-column-gap: 0.75rem;
   }
 }
 @media screen and (min-width: 769px) and (max-width: 1023px) {
-  .columns.is-variable.is-3-tablet-only {
+  .columns.is-3-tablet-only {
     --bulma-column-gap: 0.75rem;
   }
 }
 @media screen and (max-width: 1023px) {
-  .columns.is-variable.is-3-touch {
+  .columns.is-3-touch {
     --bulma-column-gap: 0.75rem;
   }
 }
 @media screen and (min-width: 1024px) {
-  .columns.is-variable.is-3-desktop {
+  .columns.is-3-desktop {
     --bulma-column-gap: 0.75rem;
   }
 }
 @media screen and (min-width: 1024px) and (max-width: 1215px) {
-  .columns.is-variable.is-3-desktop-only {
+  .columns.is-3-desktop-only {
     --bulma-column-gap: 0.75rem;
   }
 }
 @media screen and (min-width: 1216px) {
-  .columns.is-variable.is-3-widescreen {
+  .columns.is-3-widescreen {
     --bulma-column-gap: 0.75rem;
   }
 }
 @media screen and (min-width: 1216px) and (max-width: 1407px) {
-  .columns.is-variable.is-3-widescreen-only {
+  .columns.is-3-widescreen-only {
     --bulma-column-gap: 0.75rem;
   }
 }
 @media screen and (min-width: 1408px) {
-  .columns.is-variable.is-3-fullhd {
+  .columns.is-3-fullhd {
     --bulma-column-gap: 0.75rem;
   }
 }
-.columns.is-variable.is-4 {
+.columns.is-4 {
   --bulma-column-gap: 1rem;
 }
 @media screen and (max-width: 768px) {
-  .columns.is-variable.is-4-mobile {
+  .columns.is-4-mobile {
     --bulma-column-gap: 1rem;
   }
 }
 @media screen and (min-width: 769px), print {
-  .columns.is-variable.is-4-tablet {
+  .columns.is-4-tablet {
     --bulma-column-gap: 1rem;
   }
 }
 @media screen and (min-width: 769px) and (max-width: 1023px) {
-  .columns.is-variable.is-4-tablet-only {
+  .columns.is-4-tablet-only {
     --bulma-column-gap: 1rem;
   }
 }
 @media screen and (max-width: 1023px) {
-  .columns.is-variable.is-4-touch {
+  .columns.is-4-touch {
     --bulma-column-gap: 1rem;
   }
 }
 @media screen and (min-width: 1024px) {
-  .columns.is-variable.is-4-desktop {
+  .columns.is-4-desktop {
     --bulma-column-gap: 1rem;
   }
 }
 @media screen and (min-width: 1024px) and (max-width: 1215px) {
-  .columns.is-variable.is-4-desktop-only {
+  .columns.is-4-desktop-only {
     --bulma-column-gap: 1rem;
   }
 }
 @media screen and (min-width: 1216px) {
-  .columns.is-variable.is-4-widescreen {
+  .columns.is-4-widescreen {
     --bulma-column-gap: 1rem;
   }
 }
 @media screen and (min-width: 1216px) and (max-width: 1407px) {
-  .columns.is-variable.is-4-widescreen-only {
+  .columns.is-4-widescreen-only {
     --bulma-column-gap: 1rem;
   }
 }
 @media screen and (min-width: 1408px) {
-  .columns.is-variable.is-4-fullhd {
+  .columns.is-4-fullhd {
     --bulma-column-gap: 1rem;
   }
 }
-.columns.is-variable.is-5 {
+.columns.is-5 {
   --bulma-column-gap: 1.25rem;
 }
 @media screen and (max-width: 768px) {
-  .columns.is-variable.is-5-mobile {
+  .columns.is-5-mobile {
     --bulma-column-gap: 1.25rem;
   }
 }
 @media screen and (min-width: 769px), print {
-  .columns.is-variable.is-5-tablet {
+  .columns.is-5-tablet {
     --bulma-column-gap: 1.25rem;
   }
 }
 @media screen and (min-width: 769px) and (max-width: 1023px) {
-  .columns.is-variable.is-5-tablet-only {
+  .columns.is-5-tablet-only {
     --bulma-column-gap: 1.25rem;
   }
 }
 @media screen and (max-width: 1023px) {
-  .columns.is-variable.is-5-touch {
+  .columns.is-5-touch {
     --bulma-column-gap: 1.25rem;
   }
 }
 @media screen and (min-width: 1024px) {
-  .columns.is-variable.is-5-desktop {
+  .columns.is-5-desktop {
     --bulma-column-gap: 1.25rem;
   }
 }
 @media screen and (min-width: 1024px) and (max-width: 1215px) {
-  .columns.is-variable.is-5-desktop-only {
+  .columns.is-5-desktop-only {
     --bulma-column-gap: 1.25rem;
   }
 }
 @media screen and (min-width: 1216px) {
-  .columns.is-variable.is-5-widescreen {
+  .columns.is-5-widescreen {
     --bulma-column-gap: 1.25rem;
   }
 }
 @media screen and (min-width: 1216px) and (max-width: 1407px) {
-  .columns.is-variable.is-5-widescreen-only {
+  .columns.is-5-widescreen-only {
     --bulma-column-gap: 1.25rem;
   }
 }
 @media screen and (min-width: 1408px) {
-  .columns.is-variable.is-5-fullhd {
+  .columns.is-5-fullhd {
     --bulma-column-gap: 1.25rem;
   }
 }
-.columns.is-variable.is-6 {
+.columns.is-6 {
   --bulma-column-gap: 1.5rem;
 }
 @media screen and (max-width: 768px) {
-  .columns.is-variable.is-6-mobile {
+  .columns.is-6-mobile {
     --bulma-column-gap: 1.5rem;
   }
 }
 @media screen and (min-width: 769px), print {
-  .columns.is-variable.is-6-tablet {
+  .columns.is-6-tablet {
     --bulma-column-gap: 1.5rem;
   }
 }
 @media screen and (min-width: 769px) and (max-width: 1023px) {
-  .columns.is-variable.is-6-tablet-only {
+  .columns.is-6-tablet-only {
     --bulma-column-gap: 1.5rem;
   }
 }
 @media screen and (max-width: 1023px) {
-  .columns.is-variable.is-6-touch {
+  .columns.is-6-touch {
     --bulma-column-gap: 1.5rem;
   }
 }
 @media screen and (min-width: 1024px) {
-  .columns.is-variable.is-6-desktop {
+  .columns.is-6-desktop {
     --bulma-column-gap: 1.5rem;
   }
 }
 @media screen and (min-width: 1024px) and (max-width: 1215px) {
-  .columns.is-variable.is-6-desktop-only {
+  .columns.is-6-desktop-only {
     --bulma-column-gap: 1.5rem;
   }
 }
 @media screen and (min-width: 1216px) {
-  .columns.is-variable.is-6-widescreen {
+  .columns.is-6-widescreen {
     --bulma-column-gap: 1.5rem;
   }
 }
 @media screen and (min-width: 1216px) and (max-width: 1407px) {
-  .columns.is-variable.is-6-widescreen-only {
+  .columns.is-6-widescreen-only {
     --bulma-column-gap: 1.5rem;
   }
 }
 @media screen and (min-width: 1408px) {
-  .columns.is-variable.is-6-fullhd {
+  .columns.is-6-fullhd {
     --bulma-column-gap: 1.5rem;
   }
 }
-.columns.is-variable.is-7 {
+.columns.is-7 {
   --bulma-column-gap: 1.75rem;
 }
 @media screen and (max-width: 768px) {
-  .columns.is-variable.is-7-mobile {
+  .columns.is-7-mobile {
     --bulma-column-gap: 1.75rem;
   }
 }
 @media screen and (min-width: 769px), print {
-  .columns.is-variable.is-7-tablet {
+  .columns.is-7-tablet {
     --bulma-column-gap: 1.75rem;
   }
 }
 @media screen and (min-width: 769px) and (max-width: 1023px) {
-  .columns.is-variable.is-7-tablet-only {
+  .columns.is-7-tablet-only {
     --bulma-column-gap: 1.75rem;
   }
 }
 @media screen and (max-width: 1023px) {
-  .columns.is-variable.is-7-touch {
+  .columns.is-7-touch {
     --bulma-column-gap: 1.75rem;
   }
 }
 @media screen and (min-width: 1024px) {
-  .columns.is-variable.is-7-desktop {
+  .columns.is-7-desktop {
     --bulma-column-gap: 1.75rem;
   }
 }
 @media screen and (min-width: 1024px) and (max-width: 1215px) {
-  .columns.is-variable.is-7-desktop-only {
+  .columns.is-7-desktop-only {
     --bulma-column-gap: 1.75rem;
   }
 }
 @media screen and (min-width: 1216px) {
-  .columns.is-variable.is-7-widescreen {
+  .columns.is-7-widescreen {
     --bulma-column-gap: 1.75rem;
   }
 }
 @media screen and (min-width: 1216px) and (max-width: 1407px) {
-  .columns.is-variable.is-7-widescreen-only {
+  .columns.is-7-widescreen-only {
     --bulma-column-gap: 1.75rem;
   }
 }
 @media screen and (min-width: 1408px) {
-  .columns.is-variable.is-7-fullhd {
+  .columns.is-7-fullhd {
     --bulma-column-gap: 1.75rem;
   }
 }
-.columns.is-variable.is-8 {
+.columns.is-8 {
   --bulma-column-gap: 2rem;
 }
 @media screen and (max-width: 768px) {
-  .columns.is-variable.is-8-mobile {
+  .columns.is-8-mobile {
     --bulma-column-gap: 2rem;
   }
 }
 @media screen and (min-width: 769px), print {
-  .columns.is-variable.is-8-tablet {
+  .columns.is-8-tablet {
     --bulma-column-gap: 2rem;
   }
 }
 @media screen and (min-width: 769px) and (max-width: 1023px) {
-  .columns.is-variable.is-8-tablet-only {
+  .columns.is-8-tablet-only {
     --bulma-column-gap: 2rem;
   }
 }
 @media screen and (max-width: 1023px) {
-  .columns.is-variable.is-8-touch {
+  .columns.is-8-touch {
     --bulma-column-gap: 2rem;
   }
 }
 @media screen and (min-width: 1024px) {
-  .columns.is-variable.is-8-desktop {
+  .columns.is-8-desktop {
     --bulma-column-gap: 2rem;
   }
 }
 @media screen and (min-width: 1024px) and (max-width: 1215px) {
-  .columns.is-variable.is-8-desktop-only {
+  .columns.is-8-desktop-only {
     --bulma-column-gap: 2rem;
   }
 }
 @media screen and (min-width: 1216px) {
-  .columns.is-variable.is-8-widescreen {
+  .columns.is-8-widescreen {
     --bulma-column-gap: 2rem;
   }
 }
 @media screen and (min-width: 1216px) and (max-width: 1407px) {
-  .columns.is-variable.is-8-widescreen-only {
+  .columns.is-8-widescreen-only {
     --bulma-column-gap: 2rem;
   }
 }
 @media screen and (min-width: 1408px) {
-  .columns.is-variable.is-8-fullhd {
+  .columns.is-8-fullhd {
     --bulma-column-gap: 2rem;
   }
 }
@@ -7594,6 +7595,66 @@ label.panel-block:hover {
 }
 .grid.is-col-min-12 {
   --bulma-grid-column-min: 18rem;
+}
+.grid.is-col-min-13 {
+  --bulma-grid-column-min: 19.5rem;
+}
+.grid.is-col-min-14 {
+  --bulma-grid-column-min: 21rem;
+}
+.grid.is-col-min-15 {
+  --bulma-grid-column-min: 22.5rem;
+}
+.grid.is-col-min-16 {
+  --bulma-grid-column-min: 24rem;
+}
+.grid.is-col-min-17 {
+  --bulma-grid-column-min: 25.5rem;
+}
+.grid.is-col-min-18 {
+  --bulma-grid-column-min: 27rem;
+}
+.grid.is-col-min-19 {
+  --bulma-grid-column-min: 28.5rem;
+}
+.grid.is-col-min-20 {
+  --bulma-grid-column-min: 30rem;
+}
+.grid.is-col-min-21 {
+  --bulma-grid-column-min: 31.5rem;
+}
+.grid.is-col-min-22 {
+  --bulma-grid-column-min: 33rem;
+}
+.grid.is-col-min-23 {
+  --bulma-grid-column-min: 34.5rem;
+}
+.grid.is-col-min-24 {
+  --bulma-grid-column-min: 36rem;
+}
+.grid.is-col-min-25 {
+  --bulma-grid-column-min: 37.5rem;
+}
+.grid.is-col-min-26 {
+  --bulma-grid-column-min: 39rem;
+}
+.grid.is-col-min-27 {
+  --bulma-grid-column-min: 40.5rem;
+}
+.grid.is-col-min-28 {
+  --bulma-grid-column-min: 42rem;
+}
+.grid.is-col-min-29 {
+  --bulma-grid-column-min: 43.5rem;
+}
+.grid.is-col-min-30 {
+  --bulma-grid-column-min: 45rem;
+}
+.grid.is-col-min-31 {
+  --bulma-grid-column-min: 46.5rem;
+}
+.grid.is-col-min-32 {
+  --bulma-grid-column-min: 48rem;
 }
 
 .cell {
