--- a/sass/components/navbar.scss
+++ b/sass/components/navbar.scss
@@ -271,6 +271,7 @@ body {
     #{cv.getVar("navbar-item-color-l")}
   );
   display: block;
+  gap: 0.75rem;
   line-height: 1.5;
   padding: 0.5rem 0.75rem;
   position: relative;
