--- a/sass/helpers/color.scss
+++ b/sass/helpers/color.scss
@@ -326,3 +326,19 @@ $digits: (
     background-color: $shade !important;
   }
 }
+
+.#{iv.$helpers-has-prefix}text-current {
+  color: currentColor !important;
+}
+
+.#{iv.$helpers-has-prefix}text-inherit {
+  color: inherit !important;
+}
+
+.#{iv.$helpers-has-prefix}background-current {
+  background-color: currentColor !important;
+}
+
+.#{iv.$helpers-has-prefix}background-inherit {
+  background-color: inherit !important;
+}
