--- a/docs/_includes/docs/side-sponsr.html
+++ b/docs/_includes/docs/side-sponsr.html
@@ -1,14 +1,14 @@
 <div class="bd-side-sponsrs">
-  <p class="bd-side-sponsor-label">Sponsors</p>
+  <p class="bd-side-sponsor-label">Sponsor</p>
 
-  <a class="bd-side-sponsor" href="https://password.link/" target="_blank">
+  <a class="bd-side-sponsor" href="https://www.route4me.com/" target="_blank">
     {%
       include docs/elements/responsive-image.html
-      path="amis/passwordlink"
+      path="amis/route4me"
       extension="png"
-      alt="Password.link"
-      width="332"
-      height="96"
+      alt="Route Planner and Route Optimizer"
+      width="224"
+      height="57"
     %}
   </a>
 </div>
