--- a/docs/_includes/global/support.html
+++ b/docs/_includes/global/support.html
@@ -23,6 +23,14 @@
       </div>
     </div>
 
+    <div class="bd-footer-donation column">
+      <p class="bd-footer-donation-title"><strong>Browser testing</strong> via</p>
+      <div class="bd-footer-donation-action">
+        <a class="bd-hidden-dark" href="https://www.lambdatest.com/" target="_blank"><img src="https://www.lambdatest.com/support/img/logo.svg" style="vertical-align: middle;margin-left:5px" width="147" height="26" /></a>
+        <a class="bd-hidden-light" href="https://www.lambdatest.com/" target="_blank"><img src="https://www.lambdatest.com/resources/images/logo-white.svg" style="vertical-align: middle;margin-left:5px" width="147" height="26" /></a>
+      </div>
+    </div>
+
     {% if site.data.sponsors.footer.size > 0 %}
       <div class="bd-footer-donation column">
         <p class="bd-footer-donation-title">Visit our <strong>Sponsors</strong></p>
