--- a/docs/_sass/docs/menu.scss
+++ b/docs/_sass/docs/menu.scss
@@ -171,10 +171,19 @@
   line-height: 1.25rem;
 }
 
+.bd-side-sponsrs {
+  margin: 0 1rem;
+}
+
+.bd-side-sponsor-label {
+  font-weight: 500;
+  font-size: 0.875em;
+  margin-bottom: 0.5em;
+  opacity: 0.5;
+}
+
 .bd-side-sponsor {
   display: flex;
-  margin: 0.5rem;
-  margin-top: 0;
 
   img {
     border-radius: 0.75rem;
