--- a/css/versions/bulma-no-dark-mode.css
+++ b/css/versions/bulma-no-dark-mode.css
@@ -4687,9 +4687,6 @@ body.has-navbar-fixed-bottom {
   position: relative;
   vertical-align: top;
   width: 2.5rem;
-  align-self: center;
-  margin-inline-start: auto;
-  margin-inline-end: 0.375rem;
 }
 .navbar-burger span {
   background-color: currentColor;
@@ -4726,6 +4723,11 @@ body.has-navbar-fixed-bottom {
 }
 .navbar-burger.is-active span:nth-child(3), .navbar-burger.is-active span:nth-child(4) {
   opacity: 0;
+}
+.navbar-burger {
+  align-self: center;
+  margin-inline-start: auto;
+  margin-inline-end: 0.375rem;
 }
 
 .navbar-menu {
