--- a/sass/components/navbar.scss
+++ b/sass/components/navbar.scss
@@ -254,9 +254,12 @@ body {
 .#{iv.$class-prefix}navbar-burger {
   @extend %reset;
   @include mx.burger(2.5rem);
-  align-self: center;
-  margin-inline-start: auto;
-  margin-inline-end: 0.375rem;
+
+  & {
+    align-self: center;
+    margin-inline-start: auto;
+    margin-inline-end: 0.375rem;
+  }
 }
 
 .#{iv.$class-prefix}navbar-menu {
