--- a/css/bulma.css
+++ b/css/bulma.css
@@ -7490,9 +7490,6 @@ body.has-navbar-fixed-bottom {
   position: relative;
   vertical-align: top;
   width: 2.5rem;
-  align-self: center;
-  margin-inline-start: auto;
-  margin-inline-end: 0.375rem;
 }
 .navbar-burger span {
   background-color: currentColor;
@@ -7529,6 +7526,11 @@ body.has-navbar-fixed-bottom {
 }
 .navbar-burger.is-active span:nth-child(3), .navbar-burger.is-active span:nth-child(4) {
   opacity: 0;
+}
+.navbar-burger {
+  align-self: center;
+  margin-inline-start: auto;
+  margin-inline-end: 0.375rem;
 }
 
 .navbar-menu {
