--- a/css/versions/bulma-no-helpers-prefixed.css
+++ b/css/versions/bulma-no-helpers-prefixed.css
@@ -4687,9 +4687,6 @@ body.bulma-has-navbar-fixed-bottom {
   position: relative;
   vertical-align: top;
   width: 2.5rem;
-  align-self: center;
-  margin-inline-start: auto;
-  margin-inline-end: 0.375rem;
 }
 .bulma-navbar-burger span {
   background-color: currentColor;
@@ -4726,6 +4723,11 @@ body.bulma-has-navbar-fixed-bottom {
 }
 .bulma-navbar-burger.bulma-is-active span:nth-child(3), .bulma-navbar-burger.bulma-is-active span:nth-child(4) {
   opacity: 0;
+}
+.bulma-navbar-burger {
+  align-self: center;
+  margin-inline-start: auto;
+  margin-inline-end: 0.375rem;
 }
 
 .bulma-navbar-menu {
