Issue-3895: Make variables root configurable

--- a/sass/base/generic.scss
+++ b/sass/base/generic.scss
@@ -32,7 +32,7 @@ $pre-font-size: 0.875em !default;
 $pre-padding: 1.25rem 1.5rem !default;
 $pre-code-font-size: 1em !default;
 
-:root {
+#{cv.$variables-host} {
   @include cv.register-vars(
     (
       "body-background-color": #{$body-background-color},
