--- a/sass/utilities/initial-variables.scss
+++ b/sass/utilities/initial-variables.scss
@@ -153,3 +153,4 @@ $class-prefix: "" !default;
 $cssvars-prefix: "bulma-" !default;
 $helpers-prefix: "is-" !default;
 $helpers-has-prefix: "has-" !default;
+$variables-host: ":root" !default;
