--- a/sass/utilities/controls.scss
+++ b/sass/utilities/controls.scss
@@ -16,7 +16,10 @@ $control-padding-horizontal: calc(0.75em - #{$control-border-width}) !default;
 
 $control-focus-shadow-l: 50% !default;
 
-:root {
+@debug cv.$variables-host;
+@debug iv.$radius;
+
+#{cv.$variables-host} {
   @include cv.register-vars(
     (
       "control-radius": #{$control-radius},
