Fix #3842: restore use of $easing, $radius-rounded and $speed Sass variables

--- a/sass/themes/light.scss
+++ b/sass/themes/light.scss
@@ -73,13 +73,13 @@ $scheme-main: hsl(iv.$scheme-h, iv.$scheme-s, $scheme-main-l);
       // Other
       "block-spacing": iv.$block-spacing,
       "duration": 294ms,
-      "easing": ease-out,
+      "easing": iv.$easing,
       "radius-small": iv.$radius-small,
       "radius": iv.$radius,
       "radius-medium": iv.$radius-medium,
       "radius-large": iv.$radius-large,
-      "radius-rounded": 9999px,
-      "speed": 86ms,
+      "radius-rounded": iv.$radius-rounded,
+      "speed": iv.$speed,
 
       "arrow-color": #{cv.getVar("link")},
       "loading-color": #{cv.getVar("border")},
